--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="score">0</div>
 
     <section class="section intro">
-        <h1 data-max-length="10" data-original-text="Bubbl POP!" class="editable shootable"><span>B</span><span>U</span><span>B</span><span>B</span><span>L</span><span>P</span><span>O</span><span>P</span><span>!</span></h1>
+        <h1 data-max-length="10" data-original-text="Bubbl POP!" class="editable shootable"><span>B</span><span>u</span><span>b</span><span>b</span><span>l</span><span>p</span><span>o</span><span>p</span><span>!</span></h1>
 
         <div class="intro-stickercontainer">
             <div class="intro-sticker intro-sticker_1 intro-sticker--speechbubble shootable">
