--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Fictional – A friendly & quirky typeface with a cartoonesque character</title>
+    <title>BubblPOP! - Design Concept 1</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="Fictional makes your branding, interfaces and printed matter more friendly and more fun!">
-    <link rel="canonical" href="fictional-typeface_default.html">
+    <meta name="description" content="BubblPOP!">
+    <link rel="canonical" href="index.html">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://fictional-typeface.com">
-    <meta property="og:title" content="Fictional – A friendly & quirky typeface with a cartoonesque character">
-    <meta property="og:description" content="Fictional makes your branding, interfaces and printed matter more friendly and more fun">
-    <meta property="og:image" content="https://fictional-typeface.com/assets/images/og.png" />
+    <meta property="og:url" content="">
+    <meta property="og:title" content="BubblPOP!">
+    <meta property="og:description" content="BubblPOP!">
+    <meta property="og:image" content="" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <link rel="stylesheet" type="text/css" href="assets/css/fvf.css">
@@ -52,7 +52,7 @@
         <div class="intro-stickercontainer">
             <div class="intro-sticker intro-sticker_1 intro-sticker--speechbubble shootable">
                 <div class="intro-sticker--speechbubble-bubble">
-                    <span class="intro-sticker-text editable" data-max-length="28" data-original-text="A friendly & quirky typeface">A friendly & quirky typeface</span></div>
+                    <span class="intro-sticker-text editable" data-max-length="28" data-original-text="A friendly & quirky typeface">Cool design concept!</span></div>
                 <svg xmlns="http://www.w3.org/2000/svg" class="intro-sticker--speechbubble-triangle" viewBox="0 0 100 100">
                     <polygon points="20 0, 100 100, 0 100" fill="#fff" />
                 </svg>
@@ -63,7 +63,7 @@
                     <polygon points="20 0, 100 100, 0 100" fill="#fff" />
                 </svg>
                 <div class="intro-sticker--speechbubble-bubble">
-                    <span class="intro-sticker-text editable" data-max-length="29" data-original-text="with a cartoonesque character">with a cartoonesque character</span>
+                    <span class="intro-sticker-text editable" data-max-length="29" data-original-text="with a cartoonesque character">fun and engaging style!</span>
                 </div>
             </div>
 
@@ -76,11 +76,11 @@
             </div>
 
             <div class="intro-sticker intro-sticker_5 intro-sticker--label shootable">
-                <span class="intro-sticker-text">5 Weights</span>
+                <span class="intro-sticker-text">BRUH</span>
             </div>
 
             <div class="intro-sticker intro-sticker_6 intro-sticker--label shootable">
-                <span class="intro-sticker-text">Free trial available</span>
+                <span class="intro-sticker-text">Welcome to HCT central</span>
             </div>
 
             <div class="intro-sticker intro-sticker_7 intro-sticker--shout shootable">
@@ -419,31 +419,29 @@
     </section>
 
     <section class="section info">
-        <div class="editable shootable" data-max-length="250" data-original-text="&lt;p&gt; For trial versions, licensing options and more head over to &lt;a href='https://typefaces.jonaspelzer.com/' target='_blank'&gt;Jonas Pelzer Typefaces&lt;/a&gt;!&lt;/p&gt; &lt;p&gt;If you have any questions, please send &lt;a href='mailto:mail@jonaspelzer.de?subject=Fictional Typeface'&gt;an email&lt;/a&gt;!&lt;/p&gt;">
-            <p>For trial versions, licensing options and more head over to <a href="https://typefaces.jonaspelzer.com/" target="_blank">Jonas&nbsp;Pelzer&nbsp;Typefaces</a>!</p>
-            <p>If you have any questions, please send <a href="mailto:mail@jonaspelzer.de?subject=Fictional Typeface">an email</a>!</p>
+3gt;an email&lt;/a&gt;!&lt;/p&gt;">
+            <p>WOWOWOWOWOWOWOWOWOWOow</p>
+            <p>To vote for this design concept, <a href="mailto:hocherntung@gmail.com?subject=Design vote">email </a>BubblPOP!</p>
         </div>
     </section>
 
     <section class="getit">
         <div class="getit-link shootable">
-            <a href="https://typefaces.jonaspelzer.com/fictional" target="_blank">
+            <a href="https://poop.com" target="_blank">
                 <svg class="getit-link-shout" viewBox="0 0 733.42 650.68"><path fill="#FFD80C" d="M571,113.6,454.13,237.46l127.94,50L459.29,331.72,576.92,447.19c-6.27-1.05-11.52-1.87-16.74-2.8q-56-9.9-112-19.84c-13.23-2.35-26.44-4.8-39.66-7.2-3.81-.69-3.87-.58-3,2.91q9.6,37.38,19.15,74.78c1.58,6.15,3.19,12.28,4.76,18.43.52,2,.95,4.12,1.6,7l-22.9-11-68.9-33.22c-8.52-4.11-17.06-8.18-25.53-12.39-2.08-1-3-1.07-3.62,1.56q-10.71,44.58-21.64,89.1c-3.28,13.38-6.69,26.73-10,40.1-1.32.29-1.63-.83-2.11-1.56q-30.28-45.91-60.52-91.87c-6.33-9.6-12.74-19.15-19-28.81-1.3-2-2.22-2.13-4.21-.85-26.18,16.9-52.44,33.67-78.63,50.55-2.54,1.64-3.38,1.5-3.9-1.71-4.27-26.46-8.75-52.89-13-79.35-.44-2.74-1.26-3-3.61-2Q48.21,457.41,2.9,475.75t-90.5,36.82a20.86,20.86,0,0,1-2.53.56c3.21-5.07,6.09-9.63,9-14.18q24.33-38.18,48.66-76.33Q-16.74,398-1,373.33c2.3-3.58,2.36-3.53-1.75-4.05q-73-9.22-146-18.46c-.77-.1-1.68.13-2.58-.93l124.18-77.71-107.56-70.71L-3.83,183.8l-105.47-156,.49-.54c6.33,3,12.68,6,19,9.07Q-33,63.67,23.79,91q25.26,12.14,50.44,24.41c2.64,1.3,3.37,1,3.55-2q2.59-43.62,5.41-87.22c.28-4.31.66-8.62.91-12.93.12-2,.49-2.66,2.49-1.3q33.91,23,67.91,45.8C163.74,64,173,70.15,182.18,76.46c1.69,1.16,2.46,1.12,3.48-.8,17.37-32.39,33.62-54.8,51-87.17q11.48-21.33,22.92-42.67A22.85,22.85,0,0,1,261-56c13.76,54.29,28.6,98.17,42.33,152.34l120-57.57c-8.84,37-17.47,73.24-26.24,110l173.42-35.93Z" transform="translate(151.35 56.05)"/></svg>
-                <span class="getit-link-text editable" data-max-length="12" data-original-text="BUY NOW" style="width: 4.2ch; height: 2.7em;">BUY NOW</span>
+                <span class="getit-link-text editable" data-max-length="12" data-original-text="BUY NOW" style="width: 4.2ch; height: 2.7em;">CLICK ME!</span>
             </a>
         </div>
     </section>
 
     <div class="credits">
-        <p>A project by <a class="credits-link" href="http://jonaspelzer.com/" target="_blank">Jonas Pelzer</a>, sounds from <a class="credits-link" href="http://zapsplat.com" target="_blank">zapsplat.com</a>.</p>
+        <p>A project by <a class="credits-link" href="https://thisishctweb.pages.dev" target="_blank">thisishct</a>, sounds from <a class="credits-link" href="http://zapsplat.com" target="_blank">zapsplat.com</a>.</p>
 
         <p>
-            <a class="credits-link" href="https://typefaces.jonaspelzer.com/contact" target="_blank">Imprint</a>&nbsp;&nbsp;
-            <a class="credits-link" href="mailto:mail@jonaspelzer.de?subject=Fictional Typeface" target="_blank">Contact</a>&nbsp;&nbsp;
-            <a class="credits-link" href="https://twitter.com/jonaspelzer" target="_blank" target="_blank">Twitter</a>&nbsp;&nbsp;
-            <a class="credits-link" href="https://www.instagram.com/jonas.vol2/" target="_blank">Instagram</a>&nbsp;&nbsp;
-            <a class="credits-link" href="https://www.are.na/jonas-pelzer" target="_blank">Are.na</a>&nbsp;&nbsp;
-            <a class="credits-link" href="https://www.linkedin.com/in/jonas-pelzer-70ba28214" target="_blank">LinkedIn</a>
+            <a class="credits-link" href="mailto:hocherntung@gmail.com" target="_blank">Contact</a>&nbsp;&nbsp;
+            <a class="credits-link" href="https://twitter.com/hctgtx" target="_blank" target="_blank">Twitter</a>&nbsp;&nbsp;
+            <a class="credits-link" href="https://www.instagram.com/thisishct/" target="_blank">Instagram</a>&nbsp;&nbsp;
+            <a class="credits-link" href="https://www.linkedin.com/in/that-hct-guy" target="_blank">LinkedIn</a>
         </p>
     </div>
 
