--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
     </section>
 
     <section class="section styles">
-        <button class="styles-style shootable" data-weight="60" style="font-variation-settings: 'wght' 60; width: 15ch; white-space: nowrap;">Fictional Light</button>
-        <button class="styles-style shootable" data-weight="80" style="font-variation-settings: 'wght' 80; width: 15ch; white-space: nowrap">Fictional Regular</button>
-        <button class="styles-style shootable" data-weight="100" style="font-variation-settings: 'wght' 100; width: 15ch; white-space: nowrap">Fictional SemiBold</button>
-        <button class="styles-style shootable" data-weight="120" style="font-variation-settings: 'wght' 120; width: 15ch; white-space: nowrap">Fictional Bold</button>
-        <button class="styles-style shootable" data-weight="140" style="font-variation-settings: 'wght' 140; width: 15ch; white-space: nowrap">Fictional UltraBold</button>
+        <button class="styles-style shootable" data-weight="60" style="font-variation-settings: 'wght' 60; width: 15ch; white-space: nowrap;">Light</button>
+        <button class="styles-style shootable" data-weight="80" style="font-variation-settings: 'wght' 80; width: 15ch; white-space: nowrap">Regular</button>
+        <button class="styles-style shootable" data-weight="100" style="font-variation-settings: 'wght' 100; width: 15ch; white-space: nowrap">SemiBold</button>
+        <button class="styles-style shootable" data-weight="120" style="font-variation-settings: 'wght' 120; width: 15ch; white-space: nowrap">Bold</button>
+        <button class="styles-style shootable" data-weight="140" style="font-variation-settings: 'wght' 140; width: 15ch; white-space: nowrap">UltraBold</button>
     </section>
 
     <section class="section text">
         <div class="text-text editable shootable" data-max-length="250" data-original-text="&lt;p&gt;Fictional makes your branding, interfaces and printed matter more friendly and more fun!&lt;/p&gt;&lt;p&gt;Play around with the slider to change the weight.&lt;/p&gt;">
-            <p>Fictional makes your branding, interfaces and printed matter more friendly and more fun!</p>
+            <p>WOW. All this texts are so very cool. You will love them lol.</p>
             <p>Play around with the slider to change the weight.</p>
         </div>
 
@@ -419,7 +419,6 @@
     </section>
 
     <section class="section info">
-3gt;an email&lt;/a&gt;!&lt;/p&gt;">
             <p>WOWOWOWOWOWOWOWOWOWOow</p>
             <p>To vote for this design concept, <a href="mailto:hocherntung@gmail.com?subject=Design vote">email </a>BubblPOP!</p>
         </div>
