--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/fvf.css">
     <link rel="stylesheet" type="text/css" href="assets/css/stylesheet.css">    
     <link rel="stylesheet" type="text/css" href="assets/css/intro.css">
-    <link rel="shortcut icon" href="assets/images/favicon.png">
+    <link rel="shortcut icon" href="">
     <style type="text/css">
         .help-the-ukraine-now__title {
             position: initial;
